responsive card + panel sizing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <meta charset="UTF-8">
   <title>My Habits</title>
 
@@ -116,9 +115,8 @@
       <h2>Learn Japanese</h2>
     </div>
 
-      <!-- 🔥 NEW: Task 5 - ChatGPT (opens link) -->
+    <!-- Task 5 - ChatGPT -->
     <div class="habit-card" data-habit="chatgpt">
-      <!-- you can change this gif if you want -->
       <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" />
       <h2>ChatGPT</h2>
     </div>
@@ -136,6 +134,7 @@
       <div id="tracker21Grid" class="tracker21-grid"></div>
     </div>
   </div>
+
   <!-- ChatGPT redirect popup -->
   <div id="chatgptPopup" class="chatgpt-popup">
     <div class="chatgpt-popup-inner">
@@ -146,8 +145,6 @@
       </div>
     </div>
   </div>
-
-
 
   <script src="script.js"></script>
 </body>
