--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   </div>
 
   <!-- ChatGPT redirect popup -->
-  <div id="chatgptPopup" class="chatgpt-popup">
+  <!-- <div id="chatgptPopup" class="chatgpt-popup">
     <div class="chatgpt-popup-inner">
       <p>Open today&apos;s ChatGPT log?</p>
       <div class="chatgpt-popup-buttons">
@@ -148,7 +148,7 @@
         <button id="chatgptNo">Stay</button>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- UFO NOTE POPUP -->
   <div id="notePopup" class="chatgpt-popup">
