--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
       <h2>ChatGPT</h2>
     </div>
 
+    <div class="habit-card" data-habit="python">
+  <img src="https://media.giphy.com/media/KAq5w47R9rmTuvWOWa/giphy.gif" />
+  <h2>Learn Python</h2>
+</div>
+
+
   </div>
 
   <!-- DATA PANEL (top stage, with 21-day tracker) -->
